--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "axios": "^1.6.8",
         "eslint-config-prettier": "^9.1.0",
         "framer-motion": "^11.1.7",
         "next": "14.2.3",
         "prettier": "^3.2.5",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.3"
     },
     "devDependencies": {
         "@types/node": "^20",
