--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@react-three/drei": "^9.105.6",
+        "@react-three/fiber": "^8.16.3",
+        "@types/three": "^0.164.0",
         "axios": "^1.6.8",
         "eslint-config-prettier": "^9.1.0",
         "framer-motion": "^11.1.7",
@@ -23,7 +26,8 @@
         "prettier": "^3.2.5",
         "react": "^18",
         "react-dom": "^18",
-        "react-hook-form": "^7.51.3"
+        "react-hook-form": "^7.51.3",
+        "three": "^0.164.1"
     },
     "devDependencies": {
         "@types/node": "^20",
