--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
+        "sharp": "^0.33.3",
         "three": "^0.164.1"
     },
     "devDependencies": {
